results/SVCOMP/specgen/log-NullPointerException1-2024_02_28_15_50_30.txt
class NullPointerException1 {
    //@ ensures \result <==> o == null;
    //@ ensures !\result <==> o != null;
    public static boolean f() {
        Object o = null;
        try {
            o.hashCode();
            // should pass
            return false;
        } catch (Exception e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException1.java:2: error: cannot find symbol
    //@ ensures \result <==> o == null;
                             ^
  symbol:   variable o
  location: class NullPointerException1
/home/max/Documents/JMLGPT/tmp/NullPointerException1.java:3: error: cannot find symbol
    //@ ensures !\result <==> o != null;
                              ^
  symbol:   variable o
  location: class NullPointerException1
2 errors

class NullPointerException1 {
    //@ ensures \result <==> true;
    //@ ensures !\result <==> false;
    public static boolean f() {
        Object o = null;
        try {
            o.hashCode();
            // should pass
            return false;
        } catch (Exception e) {
        }
        return true;
    }
}
